.moc/specs/adjutant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adjutant
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: adjutant
spec:
  ports:
  - name: 443-https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: adjutant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adjutant-deployment
  labels:
    app: adjutant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adjutant
  template:
    metadata:
      labels:
        app: adjutant
    spec:
      containers:
      - name: adjutant
        image: massopencloud/adjutant-moc:r1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
